[package]
name = "vesting-tests"
version = "1.0.0"
edition = "2021"


[dependencies]
cowl-vesting = { path = "../contract", default-features = false }
casper-engine-test-support = { version = "7.0.3", optional = true }
casper-execution-engine = { version = "7.0.3", optional = true }
casper-types = "4.0.1"
casper-event-standard = { version = "0.5.0", default-features = false }

[lib]
name = "vesting_tests"
bench = false
doctest = false

[features]
default = ["test-support"]
test-support = ["casper-engine-test-support", "casper-execution-engine"]
